Ensure testimonials are displayed without horizontal scrolling and show full content by default.

--- a/src/components/home/Images.scss
+++ b/src/components/home/Images.scss
@@ -12,10 +12,10 @@
   }
 
   &__image {
-    width: 90%;
-    margin: 0 auto;
+    width: 95%;
+    margin:0 auto;
     height: auto;
-    padding: 0.5rem;
+    padding: 0.3rem;
     box-sizing: border-box;
     transition: transform 0.3s ease-in-out;
 
